[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/UI components/Menu_rpg.gd" type="Script" id=1]
[ext_resource path="res://assets/themedark_letters_label.tres" type="Theme" id=2]
[ext_resource path="res://assets/GAME_FONT.tres" type="DynamicFont" id=3]

[node name="Menu_rpg" type="Node"]
script = ExtResource( 1 )

[node name="GridContainer" type="GridContainer" parent="."]
visible = false
margin_left = 808.0
margin_top = 37.0
margin_right = 1008.0
margin_bottom = 229.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="GridContainer"]
margin_right = 90.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
text = "este1"

[node name="CheckBox2" type="CheckBox" parent="GridContainer"]
margin_top = 49.0
margin_right = 90.0
margin_bottom = 94.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
text = "este2"

[node name="CheckBox3" type="CheckBox" parent="GridContainer"]
margin_top = 98.0
margin_right = 90.0
margin_bottom = 143.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
text = "este3"
[connection signal="pressed" from="GridContainer/CheckBox" to="." method="_on_CheckBox_pressed"]
[connection signal="pressed" from="GridContainer/CheckBox2" to="." method="_on_CheckBox2_pressed"]
[connection signal="pressed" from="GridContainer/CheckBox3" to="." method="_on_CheckBox3_pressed"]
